# redata

./: .dockerignore  .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  README.md  skaffold.yaml
k8s/: kustomization.yaml  minio.yaml  namespace.yaml  postgres.yaml  redata.yaml  trino.yaml
redata-frontend/: index.html  package.json
redata-frontend/src/: App.tsx
redata-frontend/src/pages/: RunInfo.tsx
redata-server/: Cargo.toml  go.mod  gqlgen.yml
redata-server/cmd/: server.go
redata-server/graph/: generated.go  schema.resolvers.go
redata-server/graph/model/: models_gen.go
redata-server/graph/schemas/: schema.graphqls
redata-server/src/: main.rs  metadata_db_types.rs  settings.rs  trino.rs  types.rs
redata-server/src/api/: mod.rs  runs.rs
src/redata-frontend/src/pages/: Explorer.tsx  Home.tsx  Search.tsx
src/redata-server/: Cargo.toml
src/redata-server/src/: main.rs
