[package]
name = "redata-server"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = { version = "0.8.21", features = ["uuid1"] }
prusto = { version = "0.5", features = ["presto"] }
serde_derive = "1.0.217"
config = "0.15.7"
rocket_db_pools = "0.2.0"
sea-query = "0.32.1"

[dependencies.rocket]
version = "0.5.1"
features = ["json", "uuid"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.rocket_okapi]
version = "0.9.0"
features = ["swagger", "uuid", "rocket_db_pools"]
