[package]
name = "redata-server"
version = "0.1.0"
edition = "2021"

[dependencies]
schemars = { version = "0.8.21", features = ["uuid1"] }
prusto = { version = "0.5", features = ["presto"] }

[dependencies.rocket]
version = "0.5.1"
features = ["json", "uuid"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.rocket_okapi]
version = "0.9.0"
features = ["swagger", "uuid"]
